Designer VUI/UX at New York Public Radio - Anywhere - Dribbble Design Jobs   . ServiceNow Careers - Lead UX Designer. Senior UX Researcher | PRODUCTHIRE.NET. Merkle Inc. UX Design Lead | SmartRecruiters. Merkle Inc. UX Design Lead | SmartRecruiters. Merkle Inc. UX Design Lead | SmartRecruiters. Merkle Inc. UX Design Lead | SmartRecruiters. Merkle Inc. UX Design Lead | SmartRecruiters. Stellenangebot: UX / UI Designer*in (Berlin) – dasauge® Stellenmarkt. Job @ bookingkit (Berlin): UX/UI Designer (m/f/d) | JOIN.         [CDI] UX Designer expérimenté à Aix en Provence - Digirocks - UXJobs.fr     . Senior UX Designer (Temp to Perm) - Corra - Career Page. Job @ maxcluster (Paderborn): UI/UX Frontend Desig... | JOIN. Authentic Jobs UX/UI Designer at Modea. SugarCRM Careers - Senior UX Designer. Senior Professional UX Researcher | WorkNOLA.       Senior UX/UI Designer at Borne - London - Dribbble Design Jobs   . SugarCRM Careers - Senior UX Designer. Ubisoft UX Designer [Snowdrop] | SmartRecruiters. Graduate UX/UI Designer | Vacancies | After Digital. Internship UI/UX Design - Digital Mobility | PRODUCTHIRE.NET. UX/UI Designer: Innovative Tech Brand – Cape Town, CBD - VGP. Einstiegspraktikum User Experience (Junior UX) - Zeix, UX Agentur.       UX Designer at Numbrs Personal Finance AG - Zurich, Switzerland - Dribbble Design Jobs   . Publicis Groupe UX Designer | SmartRecruiters. Publicis Groupe UX Designer | SmartRecruiters. Stellenangebot: Senior UX-Designer (m/w/d) (Frankfurt am Main) – dasauge® Stellenmarkt.       UX Designer at Numbrs Personal Finance AG - Zurich, Switzerland - Dribbble Design Jobs   .       Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs   . Stellenangebot: UX Designer (m/w/d) (Erkrath) – dasauge® Stellenmarkt. Stellenangebot: Senior UX Designer / Concepter (w/m/d) (Köln) – dasauge® Stellenmarkt.       Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs   . Stellenangebot: UX Designer / Concepter (w/m/d) (K

--- a/ux.html
+++ b/ux.html
@@ -41,28 +41,38 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://producthire.net/job/senior-ux-researcher-5/'>Senior UX Researcher | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=feed'>
+      Designer VUI/UX at New York Public Radio - Anywhere - Dribbble Design Jobs
+  </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=obZkafwo&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ni0AmMwv'>ServiceNow Careers - Lead UX Designer</a></h5> 
+<p><span class="badge badge-light">Santa Clara, California  San Diego, California  Kirkland, Washington</span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
+<h5><a href='https://producthire.net/job/senior-ux-researcher-5/'>Senior UX Researcher | PRODUCTHIRE.NET</a></h5> 
+<p><span class="badge badge-light">Mountain View United States</span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999698327886-ux-design-lead'>Merkle Inc. UX Design Lead | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999698328048-ux-design-lead'>Merkle Inc. UX Design Lead | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999698328206-ux-design-lead'>Merkle Inc. UX Design Lead | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999698329505-ux-design-lead'>Merkle Inc. UX Design Lead | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Minneapolis, MN</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999698329856-ux-design-lead'>Merkle Inc. UX Design Lead | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584719'>Stellenangebot: UX / UI Designer*in (Berlin) ? dasauge? Stellenmarkt</a></h5> 
@@ -125,7 +135,7 @@
 <p><span class="badge badge-light">Cape Town</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zeix.com/jobs/einstiegspraktikum-user-experience-junior-ux/'>Einstiegspraktikum User Experience (Junior UX) - Zeix, UX Agentur</a></h5> 
+<h5><a href='https://zeix.com/jobs/einstiegspraktikum-user-experience-junior-ux/'>Einstiegspraktikum User Experience (Junior UX) - Zeix, UX Agentur</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -245,7 +255,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/well/jobs/4495655002'>Job Application for Senior UI/UX Designer at Well</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/well/jobs/4495655002'>Job Application for Senior UI/UX Designer at Well</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -397,7 +407,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/certainaffinity/job/oSSpbfw4'>Certain Affinity, Inc. Careers - Senior UI/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/certainaffinity/job/oSSpbfw4'>Certain Affinity, Inc. Careers - Senior UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario  Austin, Texas Toronto, Canada Toronto Austin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -405,7 +415,7 @@
 <p><span class="badge badge-light">Austin, Texas  Austin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/ux-researcher-hiring-events/'>UX Researcher (Hiring Events) | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://producthire.net/job/ux-researcher-hiring-events/'>UX Researcher (Hiring Events) | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -450,7 +460,7 @@ experience by ensuring our product is intuitive and engaging to use. Who you are
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o28VafwZ&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nqlckMwy'>ServiceNow Careers - Principal UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o28VafwZ&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nqlckMwy'>ServiceNow Careers - Principal UX Designer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
@@ -460,19 +470,9 @@ experience by ensuring our product is intuitive and engaging to use. Who you are
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zscaler/job/oGzRafw0'>Zscaler Careers - Software Engineer - UX Design</a></h5> 
+<h5><a href='https://jobs.jobvite.com/zscaler/job/oGzRafw0'>Zscaler Careers - Software Engineer - UX Design</a></h5> 
 <p><span class="badge badge-light">San Jose, California  San Jose, CA</span></p>
 <p>Posted on: 2019-10-25</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/pathrise/9b249afa-c210-4d40-9611-9ca8806fdab2'>Pathrise - UX Design Technologist Intern</a></h5> 
-<p><span class="badge badge-light">San Francisco</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://celtra.recruiterbox.com/jobs/fk03rkc/'>
-    UX Designer at Celtra, Inc.
-</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-24</p>
 <hr/>
 
 
